# LLBP

./: .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  eval_all.sh  eval_benchmarks.sh  main.cc
.github/configs/: wordlist.txt
.github/workflows/: build-and-run.yml  cmake-multi-platform.yml  linters.yml
analysis/: mpki.ipynb  requirements.txt
bpmodels/: CMakeLists.txt  base_predictor.cc  base_predictor.h
bpmodels/components/: cache.h  counters.h  hist_registers.h
bpmodels/llbp/: llbp.cc  llbp.h
bpmodels/tage/: tage.cc  tage.h  tage_scl.cc  tage_scl.h
btb/: basic_btb.h  branch_info.h  btb.cc  ittage_64KB.h  ras.h
utils/: CMakeLists.txt  common.cc  common.h  download_traces.sh  error.h  fileutils.cc  fileutils.h  histogram.h  intmath.hh
